vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_parenthesized_unused_or_block.vv
import v.embed_file

fn maybe_file() ?embed_file.EmbedFileData {
	return none
}

fn main() {
	(maybe_file() or {
		// fallback value
		$embed_file(@FILE)
	})
}
